--- a/my first web page.html
+++ b/my first web page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to my first Webpage</h1>
-    <p>Hello everyone, this is Harsh Paliwal. </p>
+    <p>Hello everyone, this is Bhavik Jain. </p>
     <br/>
     <img src="#" width="560" height="315" alt="My Photo" />
     <br/>
