--- a/segmentic webpage.html
+++ b/segmentic webpage.html
@@ -8,7 +8,7 @@
 <body>
   
   <header>
-    <h1>Harsh Paliwal</h1>
+    <h1>Bhavik Jain</h1>
   </header>
 
   
@@ -23,14 +23,14 @@
     <section>
       <article>
         <h2>About Me</h2>
-        <p>Hello! My name is Harsh. I am passionate about <span>technology</span> and love exploring new ideas.</p>
+        <p>Hello! My name is Bhavik. I am passionate about <span>technology</span> and love exploring new ideas.</p>
       </article>
     </section>
   </div>
 
   
   <footer>
-    <p>&copy; Harsh Paliwal — September 9, 2025</p>
+    <p>&copy; Bhavik Jain— September 9, 2025</p>
   </footer>
 </body>
 </html>
